jsonschemadsl2ecore.trafo.opt/test/test104/invalidtests/example9.test104
{
	"ale":{
		"runs-on":1,
		"bar":true
	},
	"prop1":"abcdefghilmn"	,
	"prop2":"not valid"
} 